infrastructure/kubernetes/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migratio-staging
  labels:
    name: migratio-staging
    environment: staging
